ingress-test/ingress-test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"service.beta.kubernetes.io/aws-load-balancer-backend-protocol":"tcp"},"name":"envoy","namespace":"projectcontour"},"spec":{"externalTrafficPolicy":"Local","ports":[{"name":"http","port":80,"protocol":"TCP","targetPort":8080},{"name":"https","port":443,"protocol":"TCP","targetPort":8443}],"selector":{"app":"envoy"},"type":"LoadBalancer"}}
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
  creationTimestamp: "2022-10-09T14:48:55Z"
  name: envoy
  namespace: projectcontour
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.105.106.115
  clusterIPs:
    - 10.105.106.115
  externalTrafficPolicy: Local
  healthCheckNodePort: 31658
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      nodePort: 31997
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: http2
      nodePort: 31998
      port: 81
      protocol: TCP
      targetPort: 8080
    - name: https
      nodePort: 31664
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app: envoy
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
