ingress-test/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-simple
  namespace: simple
spec:
  ingressClassName: contour
  rules:
    - host: www.romajan-apps.ru
      http:
        paths:
          - path: /simple-spring
            pathType: Prefix
            backend:
              service:
                name: simple-svc
                port:
                  number: 80
